--- a/index.html
+++ b/index.html
@@ -35,15 +35,8 @@
 			left: 0;
 		}
 	</style>
-	<script>
-		(() => {
-			doc.addEventListener('DOMContentLoaded', () => {
-				doc.body.opacity = '1.0';
-			})
-		})();
-	</script>
 </head>
-<body style="opacity: 0;">
+<body>
 	<div class="wrapper">
 		<div class="bar"></div>
 	</div>
