--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 			bottom: 0;
 			left: 0;
 		}
+                @media screen and (max-width: 480px) {
+			img {
+				width: 100%;
+			}
+		}
 	</style>
 </head>
 <body>
